--- a/ckanext/cioos_theme/templates/header.html
+++ b/ckanext/cioos_theme/templates/header.html
@@ -93,7 +93,7 @@
 
 <header id="mainmenu" class="nav main-nav row">
   <div class="container">
-    <a class="logo" href="{{ h.url_for('home.index') }}"><img src="/base/images/logoEN.svg"></a>
+    <a class="logo" href="{{ h.url_for('home.index') }}"><img src="{{h.url_for_static('/base/images/logoEN.svg')}}"></a>
     {% block header_site_navigation %}
     <nav>
       <ul>
