--- a/ckanext/cioos_theme/templates/home/layout4.html
+++ b/ckanext/cioos_theme/templates/home/layout4.html
@@ -4,11 +4,19 @@
       <div class="col-md-12 col1 mapbg">
         <img src="/base/images/map.svg">
       </div>
+      <div class="col-md-12 col1 home-intro-text">
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer gravida sed magna eget pellentesque. Duis pulvinar leo at nunc convallis, at molestie dui suscipit. In sit amet lorem dictum, tristique metus sit amet, egestas neque. Integer eros ante, luctus ac lectus quis, vulputate lobortis orci. Vestibulum scelerisque commodo lectus. Phasellus id velit vestibulum, interdum magna id, consequat sem. Suspendisse ornare arcu nec placerat accumsan. In eget eleifend nunc. Duis condimentum diam non tellus bibendum, et eleifend mi malesuada. Mauris urna purus, tristique nec aliquet ac, facilisis a enim. </p>
+        <p class="mapbg "><a class="btn btn-primary" href="#" role="button">Explore Data</a><a class="btn btn-primary" href="#" role="button">Contribute to Cioos</a></p>
+      </div>
       <div class="col-md-12 col1">
-        <div class="module-content box rabox">
-          <img src="/base/images/westcoast.svg">
-          <img src="/base/images/stlawrence.svg">
-          <img src="/base/images/eastcoast.svg">
+
+        <div class="module-content box">
+          <h3 class="heading">Regional Associations</h3>
+        </div>
+        <div class="module-content module-content-end box rabox">
+            <img src="/base/images/westcoast.svg">
+            <img src="/base/images/stlawrence.svg">
+            <img src="/base/images/eastcoast.svg">
         </div>  
       </div>      
       <div class="col-md-12 col1">
