--- a/ckanext/cioos_theme/public/cioos_theme.scss
+++ b/ckanext/cioos_theme/public/cioos_theme.scss
@@ -571,3 +571,5 @@ background: url(background.png) 0 0 repeat;
 -webkit-transform: rotate(30deg);
 transform: rotate(30deg);
 }
+
+#footer {background:#52A79B}
