--- a/ckanext/cioos_theme/templates/home/layout4.html
+++ b/ckanext/cioos_theme/templates/home/layout4.html
@@ -23,11 +23,39 @@
           <h3 class="heading">Latest News</h3>
         </div>
         <div class="module-content box rabox">
-          news item
+        
+          <article class="newsitem">
+            <a href="#">
+              <img src="{{h.url_for_static('/base/images/news.jpg')}}">
+              <header class="insidepagethumbinfo">
+                <h2>News Item</h2>
+              </header>
+              <p class="insidepagethumbinfodate">29 March 2019</p>
+            </a>
+          </article>
+
+          <article class="newsitem">
+            <a href="#">
+              <img src="{{h.url_for_static('/base/images/news.jpg')}}">
+              <header class="insidepagethumbinfo">
+                <h2>News Item</h2>
+              </header>
+              <p class="insidepagethumbinfodate">29 March 2019</p>
+            </a>
+          </article>
+
+          <article class="newsitem">
+            <a href="#">
+              <img src="{{h.url_for_static('/base/images/news.jpg')}}">
+              <header class="insidepagethumbinfo">
+                <h2>News Item</h2>
+              </header>
+              <p class="insidepagethumbinfodate">29 March 2019</p>
+            </a>
+          </article>
+
         </div>
       </div>
-
-
     </div>
   </div>
 </div>
