--- a/ckanext/cioos_theme/templates/home/layout4.html
+++ b/ckanext/cioos_theme/templates/home/layout4.html
@@ -27,30 +27,30 @@
           <article class="newsitem">
             <a href="#">
               <img src="{{h.url_for_static('/base/images/news.jpg')}}">
-              <header class="insidepagethumbinfo">
+              <header>
                 <h2>News Item</h2>
               </header>
-              <p class="insidepagethumbinfodate">29 March 2019</p>
+              <p><span class="newsday">29</span><span class="newsmonth">March 2019</span></p>
             </a>
           </article>
 
           <article class="newsitem">
             <a href="#">
               <img src="{{h.url_for_static('/base/images/news.jpg')}}">
-              <header class="insidepagethumbinfo">
-                <h2>News Item</h2>
+              <header>
+                <h2>News Item Title</h2>
               </header>
-              <p class="insidepagethumbinfodate">29 March 2019</p>
+              <p><span class="newsday">29</span><span class="newsmonth">March 2019</span></p>
             </a>
           </article>
 
           <article class="newsitem">
             <a href="#">
               <img src="{{h.url_for_static('/base/images/news.jpg')}}">
-              <header class="insidepagethumbinfo">
+              <header>
                 <h2>News Item</h2>
               </header>
-              <p class="insidepagethumbinfodate">29 March 2019</p>
+              <p><span class="newsday">29</span><span class="newsmonth">March 2019</span></p>
             </a>
           </article>
 
