--- a/ckanext/cioos_theme/templates/header.html
+++ b/ckanext/cioos_theme/templates/header.html
@@ -83,10 +83,10 @@
   <div class="container">
     <nav>
       <ul>
-        <li><a href="http://cioos-pacific-wordpress-theme/fr/accueil/" tabindex="0" aria-label="French/English">FR</a></li>
-        <li><a href="http://facebook.com/cioos.siooc/" tabindex="0" aria-label="Facebook"><i class="fa fa-facebook-f"></i></a></li>
         <li><a href="http://twitter.com/cioos_siooc" tabindex="0" aria-label="Twitter"><i class="fa fa-twitter"></i></a></li>
-      </ul>
+        <li><a href="http://facebook.com/cioos.siooc/" tabindex="0" aria-label="Facebook"><i class="fa fa-facebook-square"></i></a></li>
+        <li><a href="http://cioos-pacific-wordpress-theme/fr/accueil/" tabindex="0" aria-label="French/English">FR</a></li>
+        </ul>
     </nav>
   </div>
 </header>
