--- a/ckanext/cioos_theme/templates/header.html
+++ b/ckanext/cioos_theme/templates/header.html
@@ -91,7 +91,7 @@
   </div>
 </header>
 
-<header id="mainmenu" class="nav main-nav row">
+<header id="mainmenu" class="nav main-nav">
   <div class="container">
     <a class="logo" href="{{ h.url_for('home.index') }}"><img src="{{h.url_for_static('/base/images/logoEN.svg')}}"></a>
     {% block header_site_navigation %}
